src/styles/_grid.scss
// The MIT License (MIT)
//
// Copyright (c) 2018 Hakan Alpay
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included
// in all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
// SOFTWARE.

@use 'defs' as *;
@use 'shevy/functions' as *;

* {
  border: 0;
  box-sizing: border-box;
}


img {
  max-width: 100%;
}


body {
  font-family: $sans-serif;
  background: $site-bg;
  color: $site-text;
}


section {
  margin-left: auto;
  margin-right: auto;
  width: 50 * $em;
}


header {
  padding-top: 3.5rem;
  width: bs(25);
  margin: 0 auto;
  text-align: center;

  max-width: var(--main-width);

  display: flex;
  align-items: center;
  flex-direction: column;
  width: 100vw;

  @include for-tablet-up {
    padding-top: 5rem;
  }

  picture {
    position: absolute;
    z-index: -1;
    top: 0;
  }

  p {
    margin-top: 0;
  }

  nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    background: rgba($site-bg, 0.95);
    border-bottom: 1px solid rgba($orange, 0.4);
    z-index: 10;

    #nav {
      max-width: min(800px, calc(100vw - 2rem));
      margin: 0 auto;
      padding: bs(0.35) bs(0.5);
      display: flex;
      flex-direction: column;
      align-items: center;
      gap: bs(0.15);
    }

    .nav-tagline {
      margin: 0;
      font-size: 0.7rem;
      letter-spacing: 0.08em;
      text-transform: uppercase;
      color: rgba($site-text, 0.6);

      a {
        color: rgba($site-text, 0.6);
        text-decoration: none;
        &:hover { color: $orange; }
      }
    }

    .nav-links {
      display: flex;
      gap: bs(1);
      flex-wrap: wrap;
      justify-content: center;

      a {
        font-weight: 700;
        font-family: $serif;
        font-size: 0.85rem;
        color: $orange;
        text-decoration: none;
        position: relative;

        &::after {
          content: "";
          position: absolute;
          width: 100%;
          height: 1px;
          bottom: -0.1rem;
          left: 0;
          background-color: $orange;
          visibility: hidden;
          transform: scaleX(0);
          transition: all 0.15s ease-in-out;
        }

        &:hover::after {
          visibility: visible;
          transform: scaleX(1);
        }
      }
    }
  }

  aside {
    align-self: flex-start;
    text-align: left;
    
    @include for-tablet-up {
      align-self: auto;
      text-align: center;
    }

    span {
      position: relative;
      display: block;
      padding: 0 bs(.5);

      @include for-tablet-up {
        display: inline-block;

        &:first-of-type {
          &::before {
            content: none;
          }
        }

        &::before {
          content: "|";
          position: absolute;
          left: -.2rem;
        }
      }
    }
  }
}

main {
  max-width: var(--main-width);
  margin: 0 auto;
  padding-top: bs(1);
  // border-top: 0.5px solid $site-text-grey;
}

footer {
  max-width: var(--main-width);
  margin: 0 auto;
  background: $site-bg;
  // color: white;
  padding: bs(2) 0;

  text-align: center;


  > * {
    margin: bs(1);
  }

  #reading-progress {
    z-index: 1;
    background-color: $orange;
    width: 100vw;
    height: .5rem;
    position: fixed;
    left: 0;
    bottom: 0;
    transform: translate(-100vw, 0);
    will-change: transform;
    pointer-events: none;
    margin: 0;
  }
}

footer nav a {
  img {
    vertical-align: middle;
  }
  
}

footer p,
footer nav {
  font-size: 90%;
}

article{
  max-width: 100%;
}

article {
  width: bs(25);
  margin: 0 auto;
}


ol,
ul {
  margin-top: 0;
}


li dl,
li ol,
li ul {
  margin-bottom: 0;
}

dl {
  display: inline-block;
  margin: 0 0 bs(1) 0;
}

dt {
  padding-top: bs(0.5);
  padding-left: bs(0.5);
}

dd {

  padding-bottom: bs(0.5);
  margin-left: bs(1.5);

  + dt {
    border-top: 1px solid $primary;
  }
}

blockquote {
  border-left: 1px solid $primary;
  padding: 0 bs(1);
  margin: bs(1) 0;

  @include for-tablet-up {
    margin-left: bs(1);
  }

  footer {
    background: none;
    display: block;
    color: $site-text-grey;
    padding: bs(0.5) 0;
    font-size: 90%;
    text-align: start;
  }

}

img {
  height: auto;
  margin: 0 auto;
}

figure {
  margin: bs(1);
  img {
    display: block;
  }
}

